...
    <string name="ingredient_card_ingredient_label">Ingredient :</string>
    <string name="ingredient_card_quantity_label">Quantity :</string>
    <string name="fragment_player_recipe_image_desc">recipe image</string>
    <string name="step_text_key">step-text-key</string>
    <string name="player_fragment_tag">player-fragment-tag</string>
    <string name="was_two_pane_key">was-orientation-change-key</string>
    <string name="back_to_recipes">back to recipes</string>
    <string name="baking_time">BAKING TIME</string>
    <string name="player_playback_control_pause">pause</string>
    <string name="player_playback_control_play">play</string>
    <string name="player_playback_control_previous">previous</string>
    <string name="action_on_widget_list_item_click">action-on-widget-list-item-click</string>
</resources>
...
